--- a/style.css
+++ b/style.css
@@ -1,5 +1,22 @@
 #image{
-    width: 500px;
+    width:100%;
+    height:auto;
+    max-width:700px;
+    margin-left:auto;
+    margin-right:auto;
+    display:block;
+}
+#main p{
+    text-align: center;
+}
+    #img-div{
+        display: block;
+		margin-left: auto;
+		margin-right: auto;
+		align-content: center;
+}
+#main{
+    background-color: beige;
 }
 #title{
     text-align: center;
