--- a/style.css
+++ b/style.css
@@ -1,6 +1,28 @@
 #image{
     width: 500px;
+    width:100%;
+    height:auto;
+    max-width:700px;
+    margin-left:auto;
+    margin-right:auto;
+    display:block;
+}
+#main p{
+    text-align: center;
+}
+#img-div{
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    align-content: center;
+    background-color: white;
+}
+#main{
+    background-color: beige;
 }
 #title{
     text-align: center;
+}
+#img-caption{
+text-align: center;
 }
